--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-		'Droid Sans', 'Helvetica Neue', sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
-
-code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+@layer components {
+	.polygon {
+		width: 300px;
+		height: 200px;
+		-webkit-clip-path: polygon(0 20%, 100% 0%, 100% 100%, 0 90%);
+		clip-path: polygon(0 20%, 100% 0%, 100% 100%, 0 90%);
+		background-color: rgb(51, 51, 51);
+		border-radius: 20px;
+		border-top-left-radius: 230px 55px;
+		border-bottom-left-radius: 110px 35px;
+	}
+	.button {
+		@apply rounded-lg p-1 px-3 m-2 bg-neutral-900 text-neutral-100 border-[1px];
+	}
 }
