--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=PT+Sans:wght@400;700&family=Rubik:wght@300;400;600&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -15,5 +17,15 @@
 	}
 	.button {
 		@apply rounded-lg p-1 px-3 m-2 bg-neutral-900 text-neutral-100 border-[1px];
+	}
+	.serif-font {
+		font-family: 'Merriweather', serif;
+	}
+	.sans-font {
+		font-family: 'Kanit', sans-serif;
+	}
+	.background {
+		background-image: url('assets/whiteBackgroundMountains.png');
+		background-size: cover;
 	}
 }
