improved header, improved projects page

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+	html {
+		@apply bg-neutral-100;
+	}
+}
+
 @layer components {
 	.polygon {
 		width: 300px;
@@ -25,7 +31,7 @@
 	}
 
 	.button {
-		@apply rounded-lg p-1 px-3 m-2 bg-neutral-900 text-neutral-100 border-[1px];
+		@apply rounded-lg p-1 px-3 m-2 bg-neutral-900 text-neutral-100 border-[1px] border-black sans-font font-bold;
 	}
 	.serif-font {
 		font-family: 'Merriweather', serif;
